{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "b4b5d583-2ec6-462d-9cdd-973d2492f26e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1b970553-1b87-4dc2-b7ea-bdd257a521cd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold(duration=1.401298E-45)",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4fbc903c-8664-47c2-8e3d-96d660b190e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WD",
                    "id": "238e6a06-61f8-4de0-a683-7533c03a1f14",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "58b47668-90af-4eab-a9ae-bb5a83b4f160",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b81f27de-d5a0-4a85-bbdf-31d96d535a6e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "57d97dea-6b88-4627-aff3-f3ed6308a01d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7bddf29b-e7f9-47ba-b726-78ed3cef63c8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5abfa50d-bc26-42de-9e59-a4b5b7f743e6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}